# cash_machine

./: Cargo.toml  README.md  users.db
src/: account.rs  auth.rs  authentication.rs  database.rs  deposit.rs  lib.rs  main.rs  menus.rs  model.rs  user.rs  withdraw.rs
src/account/: account.rs  deposit.rs  transactions.rs  transfer.rs  withdraw.rs
src/authentication/: authentication.rs  register.rs
src/database/: database.rs
src/menus/: menus.rs
src/models/: account.rs  account_model.rs  transaction.rs  user.rs
src/operations/: deposit.rs  transfer.rs  withdraw.rs
src/utils/: read_input.rs
